em_potential_solver/src/components/navbar/navbar.module.css
:root {
  --accent-line: #534B52;
  --side-margin: 25rem;
  --bg-ui: #E0DDCF;
  --bg-ui-hover: #d6d2c0;
}

.wrapper {
  display: flex;
  flex-flow: row nowrap;
  gap: 1rem;
  justify-content: center;

  margin: 0 var(--side-margin);
  padding: 1rem;

  border-bottom: var(--accent-line) 3px solid;
  /* border: var(--accent-line) 3px solid;
  border-top: 0;
  border-radius: 0 0 5px 5px; */
}

a {
  background-color: var(--bg-ui);
  padding: 1rem;
  min-width: 20%;

  text-align: center;

  border: var(--accent-line) 2px solid;
  border-radius: 5px;

  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

a:hover {
  background-color: var(--bg-ui-hover);
  font-weight: bold;
}

